--- a/src/Css/Footer.css
+++ b/src/Css/Footer.css
@@ -1,8 +1,27 @@
 footer {
   background: #377381;
-  height: 20vh;
+  padding: 20px;
+  color: white;
 }
+
+footer h5 {
+  font-size: 20px;
+}
+
+footer p,
 footer a {
+  font-size: 17px;
+  text-decoration: none !important;
+  color: white !important;
+}
+
+footer .a-footer {
+  display: flex;
+  justify-content: center;
+  margin-bottom: 20px;
+}
+
+footer .a-footer a {
   align-items: center;
   background: hsla(0, 0%, 85%, 0.1);
   border: 1px solid hsla(0, 0%, 100%, 0.5);
@@ -15,17 +34,33 @@ footer a {
   width: 42px;
   text-decoration: none;
   color: white !important;
-}
-footer a:hover {
-  content: "";
-  height: 42px;
-  width: 42px;
-  background-color: white;
-  border-radius: 50%;
   transition: 0.5s ease-in-out;
+
 }
 
-footer a:hover .icon {
-  color: black;
+footer .a-footer a:hover {
+  background-color: white;
   transition: 0.5s ease-in-out;
+
+}
+
+footer .a-footer a:hover .icon {
+  color: black;
+}
+
+footer .flexdiv {
+  display: flex;
+  flex-direction: column;
+}
+
+@media (max-width: 992px) {
+  footer h5 {
+    font-size: 15px;
+  }
+
+  footer p,
+  footer a {
+    font-size: 14px;
+    text-align: center;
+  }
 }
