--- a/src/Css/SecondNav.css
+++ b/src/Css/SecondNav.css
@@ -1,19 +1,18 @@
-.dropdown-toggle {
-  width: 300px;
+.dropdown-togglee {
+  width: 175px;
   background: transparent;
   border: none !important;
 }
-.dropdown-toggle:hover {
+.dropdown-togglee:hover {
   background: transparent;
   border: none;
 }
+
 .btn-success {
   background: transparent !important;
   border: none;
-
 }
-.dropdown-menuu {
-    height: 277px;
-    width: 238px;
-    left: -1px !important;
+.dropdown-item.active,
+.dropdown-item:active {
+  background: none !important;
 }
