--- a/src/Css/details.css
+++ b/src/Css/details.css
@@ -5,7 +5,7 @@
   height: 100vh;
 }
 .all-prods {
-  width: 15%;
+  width: 14%;
 }
 .all-prods div {
   display: flex;
@@ -23,12 +23,12 @@
 }
 .thumbnail-div {
   display: flex;
-  width: 34%;
+  width: 24%;
   height: 42%;
   background: #42485657;
 }
 .thumbnail-div img {
-  width: 73%;
+  width: 98%;
   display: flex;
   justify-content: center;
   align-items: center;
@@ -42,9 +42,10 @@
 }
 @media (max-width: 992px) {
   .thumb-content {
-    width: 50% !important;
+    width: 63% !important;
     height: 42%;
     background: #42485657;
+    font-size: 13px;
   }
 }
 
