--- a/src/Css/details.css
+++ b/src/Css/details.css
@@ -1,8 +1,9 @@
 .details {
   padding-left: 20px;
+  padding-right: 20px;
   padding-top: 35px;
   background-color: #6c8485;
-  height: 100vh;
+  height: 170vh;
 }
 .all-prods {
   width: 14%;
@@ -19,47 +20,34 @@
   margin: 0 auto;
   border-radius: 30px;
   width: 100%;
-  height: 100%;
 }
 .thumbnail-div {
-  display: flex;
-  width: 24%;
-  height: 42%;
-  background: #42485657;
+  width: 50%;
+  margin: 0 auto;
+  padding-bottom: 20px;
 }
 .thumbnail-div img {
-  width: 98%;
-  display: flex;
-  justify-content: center;
-  align-items: center;
-  margin: 76px auto;
+  width: 80%;
 }
 .thumb-content {
-  background: #ffffff99;
-  width: 34%;
+  background: #42485657;
+  width: 100%;
   margin: 0px auto;
   height: 450px;
 }
-@media (max-width: 992px) {
-  .thumb-content {
-    width: 63% !important;
-    height: 42%;
-    background: #42485657;
-    font-size: 13px;
-  }
-}
+
 
 .content-prod {
   padding-left: 23px;
+  text-align: center;
   letter-spacing: 2px;
 }
 @media (max-width: 992px) {
-    .content-prod {
-        padding-left: 18px;
-        letter-spacing: 2px;
-    }
-    
+  .content-prod {
+    padding-left: 18px;
+    letter-spacing: 2px;
   }
+}
 
 .quantity-buttons button {
   margin: 7px;
@@ -82,18 +70,17 @@
   font-size: 20px;
 }
 @media (max-width: 992px) {
-    .addToCart{
-        margin: 1px;
-        padding-left: 25px;
-        padding-right: 37px;
-        background-color: #8c8484;
-        color: white;
-        font-size: 21px;
-    }
-    
+  .addToCart {
+    margin: 1px;
+    padding-left: 25px;
+    padding-right: 37px;
+    background-color: #8c8484;
+    color: white;
+    font-size: 21px;
   }
+}
 
-  .title-likes{
-    margin: 50px auto;
-    padding-bottom: 600px;
-  }
+.title-likes {
+  margin: 50px auto;
+  padding-bottom: 600px;
+}
