--- a/src/App.css
+++ b/src/App.css
@@ -1,3 +1,17 @@
+html, body {
+  height: 100%; /* اجعل الارتفاع 100% */
+  margin: 0; /* أزل الهوامش */
+}
+
+#root {
+  display: flex; /* استخدم flexbox */
+  flex-direction: column; /* الاتجاه عمودي */
+  min-height: 100vh; /* اجعل الارتفاع الأدنى 100% من ارتفاع الشاشة */
+}
+
+main {
+  flex: 1; /* اجعل المساحة المتبقية تملأ الفضاء */
+}
 body{
     font-family: 'Archivo', sans-serif;
     font-family: 'Inter', sans-serif;
