--- a/src/Css/allProducts.css
+++ b/src/Css/allProducts.css
@@ -1,4 +1,4 @@
-a{
+a {
   text-decoration: none !important;
 }
 
@@ -38,27 +38,39 @@ a{
   padding-bottom: 12px;
 }
 
-.big-box{
+.big-box {
   width: 33% !important;
 }
-.big-box img{
+.big-box img {
   margin: 2px;
 }
 @media (max-width: 992px) {
   .products {
     padding: 0 !important;
-  min-height: 35vh;
-
+    min-height: 35vh;
   }
-  
-.products .big-box{
-  padding: 0 !important;
-  margin: 0 !important;
-}
-.products .big-box h2{
-font-size: 10px !important;
-}
-  .big-box img{
+
+  .products .big-box {
+    padding: 0 !important;
+    margin: 0 !important;
+  }
+  .products .big-box h2 {
+    font-size: 10px !important;
+  }
+  .big-box img {
     width: 98% !important;
   }
+}
+
+.no-products {
+  text-align: center;
+  font-size: 20px;
+  margin-top: 20px;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  width: 100%;
+  margin-top: 300px;
+  margin-bottom: 300px;
+  position: relative;
 }
